--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@
 
 #meme-container {
   /* width: 50%; */
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 25%;
   margin-top: 7.5%;
   position: relative;
 }
@@ -53,6 +52,7 @@
   background: transparent;
   bottom: 95px;
   left: 485px;
+  /* Rotates the bottom right text by 5 degrees. */
   transform: rotate(5deg);
 }
 
